fix missing whitespaces

--- a/src/sections/Greeting/Greeting.scss
+++ b/src/sections/Greeting/Greeting.scss
@@ -6,7 +6,7 @@
   
   max-width: 72rem;
   margin: 0 auto;
-  padding: 4rem 0;
+  padding: 4rem 1rem;
 
   & > p {
     margin: 1rem 0;
