--- a/src/sections/Reasons/Reasons.scss
+++ b/src/sections/Reasons/Reasons.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
 
-  padding: 1rem;
+  padding: 4rem 1rem 0;
   background-color: $color-tertiary;
   
   &__title > * {
@@ -15,6 +15,8 @@
 
 @media screen and (min-width: 768px) {
 	.reasons {
+    padding: 4rem 1rem;
+
     &__cards {
       display: grid;
       grid-template-columns: 1fr 1fr;
